# proto-gateway

./: .gitignore  BACnet_KW.pro  CMakeLists.txt  analoginputobject.cpp  analoginputobject.h  asynchowner.cpp  asynchowner.h  asynchronousactionhandler.h  asynchronousbacnettsmaction.cpp  asynchronousbacnettsmaction.h  asynchronousconfirmedhandler.cpp  asynchronousconfirmedhandler.h  asynchsetter.cpp  asynchsetter.h  bacnet-default-object.xml  bacnet-test-config.xml  bacnetaddress.cpp  bacnetaddress.h  bacnetapplicationlayer.cpp  bacnetapplicationlayer.h  bacnetbbmdhandler.cpp  bacnetbbmdhandler.h  bacnetbipaddress.cpp  bacnetbipaddress.h  bacnetbiptransportlayer.cpp  bacnetbiptransportlayer.h  bacnetbuffermanager.cpp  bacnetbuffermanager.h  bacnetcoder.cpp  bacnetcoder.h  bacnetcommon.cpp  bacnetcommon.h  bacnetconfirmedcov.cpp  bacnetconfirmedcov.h  bacnetconfirmedservicehandler.h  bacnetconstructeddata.cpp  bacnetconstructeddata.h  bacnetcovsubscription.cpp  bacnetcovsubscription.h  bacnetcovsupport.cpp  (+151 more)
applayer/: bacnetarrayvisitor.cpp  bacnetarrayvisitor.h  covnotificationrequestdata.cpp  covnotificationrequestdata.h  iamservicedata.cpp  iamservicedata.h  ihaveservicedata.cpp  ihaveservicedata.h  readpropertyservicedata.h  remoteobjectstodevicemapper.cpp  remoteobjectstodevicemapper.h  subscribecovservicedata.cpp  subscribecovservicedata.h  whoisservicedata.cpp  writepropertyservicedata.h
configs/presentation-configs/: bacnet-default-object.xml  bacnet-test-config.xml  sng-test-config.xml
datamodel/: cdm.cpp  cdm.h  property.cpp  property.h  propertyconverter.cpp  propertyconverter.h  propertyconvertersowner.cpp  propertyconvertersowner.h  propertyobserver.cpp  propertyobserver.h  propertysubject.cpp  propertysubject.h  propertywithconversionobserver.cpp  propertywithconversionobserver.h  snginternaltypesmapper.cpp  snginternaltypesmapper.h
factories/: bacnetconfigurator.cpp  bacnetconfigurator.h  configuratorhelper.cpp  configuratorhelper.h  networklayerconfigurator.cpp  networklayerconfigurator.h  objectsstructurefactory.cpp  objectsstructurefactory.h  sngfactory.cpp  sngfactory.h  transportlayerconfigurator.cpp  transportlayerconfigurator.h
gateway_common/: bacnetprotocolinterface.cpp  bacnetprotocolinterface.h  protocolinterface.h  protocolsmanager.cpp  protocolsmanager.h  sngprotocolinterface.cpp  sngprotocolinterface.h
internal/: bacnetobject2.cpp  bacnetobject2.h  bacnetproperty.cpp  bacnetproperty.h  deviceobject.cpp  deviceobject.h  internalconfirmedcovnotifhandler.cpp  internalconfirmedcovnotifhandler.h  internalconfirmedrequesthandler.cpp  internalconfirmedrequesthandler.h  internaliamservicehandler.cpp  internaliamservicehandler.h  internalihaveservicehandler.cpp  internalihaveservicehandler.h  internalobjectshandler.cpp  internalobjectshandler.h  internalpropertycontainersupport.h  internalrprequesthandler.cpp  internalrprequesthandler.h  internalsubscribecovrequesthandler.cpp  internalsubscribecovrequesthandler.h  internalsubscribecovservicehandler.cpp  internaluncfrdmcovnotifhandler.cpp  internaluncfrdmcovnotifhandler.h  internalunconfirmedrequesthandler.cpp  internalunconfirmedrequesthandler.h  internalwhohasrequesthandler.cpp  internalwhohasrequesthandler.h  internalwhoisrequesthandler.cpp  internalwhoisrequesthandler.h  internalwprequesthandler.cpp  internalwprequesthandler.h  multipleasynchhelper.cpp  multipleasynchhelper.h
obsolete/: bacneterrorack.cpp  bacnetreadpropertyservice.h  bacnetwritepropertyservice.cpp  bacnetwritepropertyservice.h
services/: bacnetreadproperty.cpp  bacnetreadproperty.h
sng/: sngcommon.cpp  sngcommon.h  sngdefinitions.cpp  sngdefinitions.h  sngexternalproperty.cpp  sngexternalproperty.h  snghandler.cpp  snghandler.h  snginternalproperty.cpp  snginternalproperty.h  snginternalsupport.cpp  snginternalsupport.h  sngsimpleactorproperty.cpp  sngsimpleactorproperty.h  sngsimplesensorproperty.cpp  sngsimplesensorproperty.h
sng/SNGConnectionManager/: CMakeLists.txt  SNGConnectionManager.pro  connectionframe.cpp  connectionframe.h  connectionmanager.cpp  groupaddress.cpp  objectconnectionsupport.cpp
sng/sng_include/: connectionframe.h  connectionmanager.h  global.h  groupaddress.h  objectconnectionsupport.h
tests/: covanswerer.cpp  covanswerer.h  rpanswerer.cpp  rpanswerer.h  sngasynchvaluesetter.cpp  sngasynchvaluesetter.h  wpacknowledger.cpp  wpacknowledger.h  wprequester.cpp  wprequester.h
